RESOLVED FIXED50394
[GTK] media/fullscreen* failing on 64-bits Debug
https://bugs.webkit.org/show_bug.cgi?id=50394
Summary [GTK] media/fullscreen* failing on 64-bits Debug
Philippe Normand
Reported 2010-12-02 09:30:41 PST
--- /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/media/media-fullscreen-inline-expected.txt 2010-12-02 09:07:21.621737209 -0800 +++ /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/media/media-fullscreen-inline-actual.txt 2010-12-02 09:07:21.621737209 -0800 @@ -17,6 +17,7 @@ *** Creating <video> element with "content/silence.mpg" in the document, should NOT support fullscreen because it is an audio-only <video> element EVENT(loadstart) EVENT(durationchange) +EVENT(durationchange) EVENT(canplaythrough) * event handler NOT triggered by a user gesture EXPECTED (mediaElement.webkitSupportsFullscreen == 'false') OK Happens only on that bot.
Attachments
proposed patch (3.14 KB, patch)
2010-12-08 05:18 PST, Philippe Normand
gustavo: review+
Philippe Normand
Comment 1 2010-12-02 09:33:37 PST
Skipped as of r73141
Philippe Normand
Comment 2 2010-12-08 05:18:21 PST
Created attachment 75893 [details] proposed patch
Gustavo Noronha (kov)
Comment 3 2010-12-08 08:38:58 PST
Comment on attachment 75893 [details] proposed patch Great investigation work =)
Philippe Normand
Comment 4 2010-12-08 08:50:35 PST
Note You need to log in before you can comment on or make changes to this bug.