2010-12-08  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] media/fullscreen* failing on 64-bits Debug
        https://bugs.webkit.org/show_bug.cgi?id=50394

        Avoid emiting durationchanged in the case where the previous
        duration was 0 because that case is already handled by the
        HTMLMediaElement.

        Test: media/media-fullscreen*.html

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::durationChanged):

LayoutTests:

        Reviewed by Gustavo Noronha Silva.

        [GTK] media/fullscreen* failing on 64-bits Debug
        https://bugs.webkit.org/show_bug.cgi?id=50394

        * platform/gtk/Skipped: Unskip now passing tests.

Canonical link: https://commits.webkit.org/63934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73523 268f45cc-cd09-0410-ab3c-d52691b4dbfc